--- a/workspace/demo-1/build.gradle
+++ b/workspace/demo-1/build.gradle
@@ -21,6 +21,8 @@ repositories {
 
 // 의존성 설정
 dependencies {
+	
+	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
@@ -29,6 +31,10 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 	implementation group: 'com.mysql', name: 'mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
+	implementation "org.mapstruct:mapstruct:1.5.3.Final"
+	
 }
 
 // 테스트 설정 
