[Feat] MapStruct 의존성 설정

--- a/workspace/demo-1/build.gradle
+++ b/workspace/demo-1/build.gradle
@@ -22,7 +22,6 @@ repositories {
 // 의존성 설정
 dependencies {
 	
-	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
@@ -32,8 +31,10 @@ dependencies {
 	implementation group: 'com.mysql', name: 'mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	
-    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
-	implementation "org.mapstruct:mapstruct:1.5.3.Final"
+    // Map Struct
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
 	
 }
 
