[Modify] JWT 로그인 수정완료

--- a/workspace/demo-1/src/main/resources/application.properties
+++ b/workspace/demo-1/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #내장 웹 서버의 포트를 지정
 server.port=8082
+
+#JWT
+jwt.secret=qwrmlasfmlqw2491u4291urjeiqowfjkwklfnlksdnfi13fnou3nounf13
