[Feat] 카카오 로그인 구현중 -> 아직 미완성

--- a/workspace/demo-1/src/main/resources/application.properties
+++ b/workspace/demo-1/src/main/resources/application.properties
@@ -35,3 +35,8 @@ spring.servlet.multipart.max-file-size=50MB
 part.upload.path=C://Users/xooxpeak/Desktop/Upload
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# 카카오 API 설정
+kakao.client-id=YOUR_KAKAO_CLIENT_ID
+kakao.redirect-uri=http://localhost:3000/login/oauth2/code/kakao
+kakao.client-secret=b11cb6a0398822bc85a4c4a94f4f76eb
