--- a/workspace/demo-1/build.gradle
+++ b/workspace/demo-1/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
 	// json
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 // 테스트 설정 
