--- a/workspace/demo-1/src/main/resources/application.properties
+++ b/workspace/demo-1/src/main/resources/application.properties
@@ -41,3 +41,16 @@ spring.mvc.hiddenmethod.filter.enabled=true
 kakao.client-id=b11cb6a0398822bc85a4c4a94f4f76eb
 kakao.redirect-uri=http://localhost:3000/login/oauth2/code/kakao
 kakao.client-secret=VBQATqouKF8vF4oS6vSjiJog2daI54wg
+
+# 네이버로그인 API 설정
+spring.security.oauth2.client.registration.naver.client-id=OybP54NI6clQWNbhDnlm
+spring.security.oauth2.client.registration.naver.client-secret=gfCdkcHE0s
+spring.security.oauth2.client.registration.naver.scope=name
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
