[Add] 네이버 로그인 구현중

--- a/workspace/demo-1/build.gradle
+++ b/workspace/demo-1/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
 	// Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 // 테스트 설정 
